[tool.poetry]
name = "irish-rail-json-api"
version = "0.1.0"
description = ""
authors = ["Briscoooe <brianbriscoe06@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
defusedxml = "^0.7.1"
APIFlask = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
