[tool.poetry]
name = "irish-rail-rest-api"
version = "0.1.0"
description = ""
authors = ["Briscoooe <brianbriscoe06@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
defusedxml = "^0.7.1"
APIFlask = "^1.1.3"
gunicorn = "^20.1.0"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
